--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for AnyEvent::MP
 
+0.02 Sun Aug  2 17:46:43 CEST 2009
+	- design has stabilised a bit, sitll unusable.
+
 0.01 Sat Aug  1 11:43:31 CEST 2009
 	- dummy upload to reserve namespace on CPAN.
 
