--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for AnyEvent::MP
 
+TODO: tls as auth-method?
+
+0.1  Tue Aug  4 23:07:11 CEST 2009
+	- AnyEvent::MP API should be ostly stable by now.
+
 0.02 Sun Aug  2 17:46:43 CEST 2009
 	- design has stabilised a bit, sitll unusable.
 
