Import of MLEHMANN/AnyEvent-MP-0.6 from CPAN.
gitpan-cpan-distribution: AnyEvent-MP
gitpan-cpan-version:      0.6
gitpan-cpan-path:         MLEHMANN/AnyEvent-MP-0.6.tar.gz
gitpan-cpan-author:       MLEHMANN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
 Revision history for AnyEvent::MP
 
-TODO: reconnecting successfull will still drop the queue and invoke monitoring.
-TODO: vastly improve reconnecting interval
+0.6  Thu Aug 13 03:15:05 CEST 2009
+	- do away with .aemp-secret and use .perl-anyevent-mp as json config
+          file.
+        - introduce bin/aemp to configure nodes.
+        - too many changes to describe
 
 0.4  Sun Aug  9 18:05:49 CEST 2009
 	- API should now be really stable :)
