--- a/README
+++ b/README
@@ -38,6 +38,14 @@ SYNOPSIS
        mon $port, $otherport       # kill otherport on abnormal death
        mon $port, $otherport, @msg # send message on death
 
+CURRENT STATUS
+       AnyEvent::MP            - stable API, should work
+       AnyEvent::MP::Intro     - outdated
+       AnyEvent::MP::Kernel    - WIP
+       AnyEvent::MP::Transport - mostly stable
+
+       stay tuned.
+
 DESCRIPTION
     This module (-family) implements a simple message passing framework.
 
@@ -49,7 +57,7 @@ DESCRIPTION
 
     At the moment, this module family is severly broken and underdocumented,
     so do not use. This was uploaded mainly to reserve the CPAN namespace -
-    stay tuned! The basic API should be finished, however.
+    stay tuned!
 
 CONCEPTS
     port
