--- a/Changes
+++ b/Changes
@@ -1,10 +1,18 @@
 Revision history for AnyEvent::MP
 
+TODO: intro
+0.7  Sat Aug 15 01:18:51 CEST 2009
+	- sorry, another major API simplification.
+	- greatly improved aemp configuration abilities.
+        - introduced profile management.
+        - updated exmaples in eg/.
+        - added Kernel::snd_to_func.
+
 0.6  Thu Aug 13 03:15:05 CEST 2009
 	- do away with .aemp-secret and use .perl-anyevent-mp as json config
           file.
         - introduce bin/aemp to configure nodes.
-        - too many changes to describe
+        - too many changes to describe.
 
 0.4  Sun Aug  9 18:05:49 CEST 2009
 	- API should now be really stable :)
