Import of MLEHMANN/AnyEvent-MP-0.8 from CPAN.
gitpan-cpan-distribution: AnyEvent-MP
gitpan-cpan-version:      0.8
gitpan-cpan-path:         MLEHMANN/AnyEvent-MP-0.8.tar.gz
gitpan-cpan-author:       MLEHMANN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,13 @@
 Revision history for AnyEvent::MP
 
 TODO: intro
+TODO: auto-reconnect? when?
+
+0.8  Wed Aug 19 07:54:50 CEST 2009
+	- added AnyEvent::MP::Global service.
+	- support "package::" names as service names.
+        - many, many, many bugfixes and tweaks.
+
 0.7  Sat Aug 15 01:18:51 CEST 2009
 	- sorry, another major API simplification.
 	- greatly improved aemp configuration abilities.
