--- a/README
+++ b/README
@@ -153,9 +153,18 @@ VARIABLES/FUNCTIONS
             them and will become a slave attached to the first node it can
             successfully connect to.
 
+            Note that slave nodes cannot change their name, and
+            consequently, their master, so if the master goes down, the
+            slave node will not function well anymore until it can
+            re-establish conenciton to its master. This makes slave nodes
+            unsuitable for long-term nodes or fault-tolerant networks.
+
         This function will block until all nodes have been resolved and, for
         slave nodes, until it has successfully established a connection to a
         master server.
+
+        All the seednodes will also be specially marked to automatically
+        retry connecting to them infinitely.
 
         Example: become a public node listening on the guessed noderef, or
         the one specified via "aemp" for the current node. This should be
@@ -336,6 +345,9 @@ VARIABLES/FUNCTIONS
         will be received by the port). After the monitoring action was
         invoked, further messages might get delivered again.
 
+        Note that monitoring-actions are one-shot: once released, they are
+        removed and will not trigger again.
+
         In the first form (callback), the callback is simply called with any
         number of @reason elements (no @reason means that the port was
         deleted "normally"). Note also that *the callback must never die*,
@@ -444,40 +456,12 @@ VARIABLES/FUNCTIONS
               };
            }
 
-NODE MESSAGES
-    Nodes understand the following messages sent to them. Many of them take
-    arguments called @reply, which will simply be used to compose a reply
-    message - $reply[0] is the port to reply to, $reply[1] the type and the
-    remaining arguments are simply the message data.
+    after $timeout, @msg
+    after $timeout, $callback
+        Either sends the given message, or call the given callback, after
+        the specified number of seconds.
 
-    While other messages exist, they are not public and subject to change.
-
-    lookup => $name, @reply
-        Replies with the port ID of the specified well-known port, or
-        "undef".
-
-    devnull => ...
-        Generic data sink/CPU heat conversion.
-
-    relay => $port, @msg
-        Simply forwards the message to the given port.
-
-    eval => $string[ @reply]
-        Evaluates the given string. If @reply is given, then a message of
-        the form "@reply, $@, @evalres" is sent.
-
-        Example: crash another node.
-
-           snd $othernode, eval => "exit";
-
-    time => @reply
-        Replies the the current node time to @reply.
-
-        Example: tell the current node to send the current time to $myport
-        in a "timereply" message.
-
-           snd $NODE, time => $myport, timereply => 1, 2;
-           # => snd $myport, timereply => 1, 2, <time>
+        This is simply a utility function that come sin handy at times.
 
 AnyEvent::MP vs. Distributed Erlang
     AnyEvent::MP got lots of its ideas from distributed Erlang (Erlang node
